Fix passport errors with JWT

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -3,3 +3,10 @@ html
     title= title
   body
     h1= message
+
+    #app
+
+    script(src="react/react.js")
+    script(src="react/react-dom.js")
+    script(src="todo.js")
+    script(src="js/lol.js")
